--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore configuration files that may contain sensitive information.
-src/web/sites/*/*settings*.php
+#src/web/sites/*/*settings*.php
 
 # Ignore paths that contain generated content.
 src/web/cache/
@@ -8,18 +8,18 @@ src/web/sites/*/files
 src/web/sites/*/private
 
 # Ignore default text files
-src/web/.htaccess
-src/web/robots.txt
-src/web/CHANGELOG.txt
-src/web/COPYRIGHT.txt
-src/web/INSTALL*.txt
-src/web/LICENSE.txt
-src/web/MAINTAINERS.txt
-src/web/UPGRADE.txt
-src/web/README.txt
-src/web/sites/all/README.txt
-src/web/sites/all/modules/README.txt
-src/web/sites/all/themes/README.txt
+#src/web/.htaccess
+#src/web/robots.txt
+#src/web/CHANGELOG.txt
+##src/web/COPYRIGHT.txt
+#src/web/INSTALL*.txt
+#src/web/LICENSE.txt
+#src/web/MAINTAINERS.txt
+#src/web/UPGRADE.txt
+#src/web/README.txt
+#src/web/sites/all/README.txt
+#src/web/sites/all/modules/README.txt
+#src/web/sites/all/themes/README.txt
 
 # Ignore everything but the "sites" folder ( for non core developer )
 #src/web/web.config
